# file-read-optimisation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CrashDataProcessor.cpp  CrashDataProcessor.h  CrashRecord.h  ICrashDataProcessor.h  MemoryUsage.h  main.cpp
src/OptimalProcessor/Experiment1ObjectofArrays/: OptimalProcessorUsingThreads.cpp  OptimalProcessorUsingThreads.h
src/OptimalProcessor/Experiment2BufferRead/: OptimalBufferRead.cpp  OptimalBufferRead.h
src/OptimalProcessor/Experiment3-VectorReserve/: OptimalVectorReserve.h
src/OptimalProcessor/Experiment3BufferReadVectorReserve/: OptimalVectorReserve.cpp  OptimalVectorReserve.h
src/OptimalProcessor/Experiment4BufferReadVectorReserveThreadLocalBuffer/: ProcessorUsingThreadLocalBuffer.cpp  ProcessorUsingThreadLocalBuffer.h
src/OptimalProcessor/Experiment5BufferReadVectorReserveThreadLocalPartialRead/: ProcessorUsingPartialRead.cpp  ProcessorUsingPartialRead.h
src/OptimalProcessor/Experiment6BufferReadVectorReserveThreadLocalPartialRead/: ProcessorUsingEpochTime.cpp  ProcessorUsingEpochTime.h
src/ParallelProcessor/: ProcessorUsingThreads.cpp  ProcessorUsingThreads.h
src/ParallelProcessor/Experiment1-Threads/: ProcessorUsingThreads.cpp
src/ParallelProcessor/Experiment1MultiThreads/: ProcessorUsingThreads.cpp  ProcessorUsingThreads.h
src/ParallelProcessor/Experiment2-BufferedRead/: ParallelBufferRead.cpp  ParallelBufferRead.h
src/ParallelProcessor/Experiment2BufferedRead/: ParallelBufferRead.cpp  ParallelBufferRead.h
src/ParallelProcessor/Experiment3-VectorReserve/: ParallelVectorReserve.h
src/ParallelProcessor/Experiment3BufferReadVectorReserve/: ParallelVectorReserve.cpp  ParallelVectorReserve.h
src/SequentialProcessor/: CrashDataProcessor.cpp  CrashDataProcessor.h  CrashRecord.h
src/SequentialProcessor/BufferedFileReadProcessor/: ProcessorUsingBufferedFileRead.cpp  ProcessorUsingBufferedFileRead.h
src/SequentialProcessor/BufferedFileReadVectorReserveProcessor/: ProcessorUsingBufferedFileReadVectorReserve.cpp  ProcessorUsingBufferedFileReadVectorReserve.h
src/SequentialProcessor/Experiment1IfStream/: ProcessorUsingIfStream.cpp  ProcessorUsingIfStream.h
src/SequentialProcessor/Experiment2BufferRead/: ProcessorUsingBufferedFileRead.cpp  ProcessorUsingBufferedFileRead.h
src/SequentialProcessor/Experiment3BufferReadVectorReserve/: ProcessorUsingBufferedFileReadVectorReserve.cpp  ProcessorUsingBufferedFileReadVectorReserve.h
src/SequentialProcessor/IfStreamProcessor/: ProcessorUsingIfStream.cpp  ProcessorUsingIfStream.h
src/common/: CrashRecord.h  ICrashDataProcessor.h
